@@ -1,23 +1,24 @@
 organization := "com.github.mliarakos"
-name := "spark-typed-ops"
-version := "0.1.0-SNAPSHOT"
+name         := "spark-typed-ops"
+version      := "0.2.0-SNAPSHOT"
 
-val scalaVersions = Seq("2.11.12", "2.12.12")
+val scalaVersions = Seq("2.12.21")
 crossScalaVersions := scalaVersions
-scalaVersion := scalaVersions.head
+scalaVersion       := scalaVersions.head
 scalacOptions ++= Seq(
   "-encoding",
   "utf8",
   "-deprecation",
   "-feature",
   "-unchecked",
-  "-Xlog-reflective-calls"
+  "-Xlog-reflective-calls",
+  "-Ywarn-unused"
 )
 
-homepage := Some(url("https://github.com/mliarakos/spark-typed-ops"))
-licenses := Seq(("Apache-2.0", url("https://www.apache.org/licenses/LICENSE-2.0")))
+homepage             := Some(url("https://github.com/mliarakos/spark-typed-ops"))
+licenses             := Seq(("Apache-2.0", url("https://www.apache.org/licenses/LICENSE-2.0")))
 organizationHomepage := Some(url("https://github.com/mliarakos"))
-pomExtra := {
+pomExtra             := {
   <developers>
     <developer>
       <id>mliarakos</id>
@@ -30,7 +31,7 @@ pomIncludeRepository := { _ =>
   false
 }
 publishMavenStyle := true
-publishTo := {
+publishTo         := {
   val nexus = "https://oss.sonatype.org"
   if (isSnapshot.value) Some("snapshots".at(s"$nexus/content/repositories/snapshots"))
   else Some("releases".at(s"$nexus/service/local/staging/deploy/maven2"))
@@ -39,26 +40,33 @@ scmInfo := Some(
   ScmInfo(url("https://github.com/mliarakos/spark-typed-ops"), "scm:git:git@github.com:mliarakos/spark-typed-ops.git")
 )
 
-parallelExecution in Test := false
-fork in Test := true
-javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:MaxPermSize=2048M", "-XX:+CMSClassUnloadingEnabled")
-
-libraryDependencies ++= Seq(
-  "com.chuusai"   %% "shapeless" % "2.3.3",
-  "org.scalatest" %% "scalatest" % "3.0.9" % Test
+Test / parallelExecution := false
+Test / fork              := true
+javaOptions ++= Seq(
+  "-Xms512M",
+  "-Xmx2048M",
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+  "--add-opens=java.base/java.net=ALL-UNNAMED",
+  "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED",
+  "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+  "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+  "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+  "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+  "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED"
 )
 
-// Use Spark 2.x with Scala 2.11 and Spark 3.x with Scala 2.12
+libraryDependencies ++= Seq(
+  "com.chuusai"   %% "shapeless" % "2.3.13",
+  "org.scalatest" %% "scalatest" % "3.1.4" % Test
+)
+
 libraryDependencies ++= {
-  if (scalaVersion.value.startsWith("2.11")) {
-    Seq(
-      "org.apache.spark" %% "spark-sql"          % "2.4.7"        % Provided,
-      "com.holdenkarau"  %% "spark-testing-base" % "2.4.5_0.14.0" % Test
-    )
-  } else {
-    Seq(
-      "org.apache.spark" %% "spark-sql"          % "3.0.1"       % Provided,
-      "com.holdenkarau"  %% "spark-testing-base" % "3.0.1_1.0.0" % Test
-    )
-  }
+  Seq(
+    "org.apache.spark" %% "spark-sql"          % "3.5.8"       % Provided,
+    "com.holdenkarau"  %% "spark-testing-base" % "3.5.6_3.0.1" % Test
+  )
 }
